# neond

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  arch_draft.md  build.rs  commands.txt  compute_1_config.json  config.json  docker-compose.yaml  draft.md  kill.sh
.claude/: settings.local.json
.github/workflows/: docker-build.yml
docs/: README.md  accounts.md  backups.md  branching.md  configuration.md  import.md  installation.md  pgbouncer.md  quickstart.md  startup.md  storage.md  tls-sni.md
landing/: README.md  package.json
landing/.vuepress/: config.ts
landing/docs/: README.md  backups.md  branching.md  configuration.md  import.md  installation.md  pgbouncer.md  quickstart.md  startup.md  storage.md  tls-sni.md
migrations/00000000000000_initial/: down.sql  up.sql
migrations/00000000000001_add_branch_slug/: down.sql  up.sql
migrations/00000000000001_branch_port/: down.sql  up.sql
migrations/00000000000002_add_branch_recent_status/: down.sql  up.sql
migrations/00000000000003_add_timestamps/: up.sql
migrations/00000000000003_compute_metric_samples/: down.sql  up.sql
migrations/00000000000004_compute_metric_samples_nullable_branch/: down.sql  up.sql
migrations/00000000000004_timestamps_and_drop_endpoints/: down.sql  up.sql
migrations/00000000000005_branch_import_status/: down.sql  up.sql
migrations/00000000000006_branches_project_id_index/: down.sql  up.sql
migrations/00000000000007_branch_pooler_port/: down.sql  up.sql
migrations/20240101000001_create_users/: up.sql
migrations/20240101000002_create_organizations/: up.sql
migrations/20240101000003_create_memberships/: up.sql
migrations/20240101000004_create_projects/: up.sql
migrations/20240101000005_create_branches/: up.sql
migrations/20240101000006_create_endpoints/: down.sql  up.sql
migrations/20240101000007_add_name_to_projects/: down.sql  up.sql
migrations/20240101000008_add_timeline_id_to_branches/: down.sql  up.sql
migrations/20240101000009_add_project_id_to_branches/: down.sql  up.sql
migrations/20240101000010_add_password_and_pg_version_to_branches/: down.sql  up.sql
resources/: openapi.yaml
src/: error.rs  main.rs
src/auth/: mod.rs
src/cli/: mod.rs
src/daemon/: mod.rs  process.rs  stdout.rs
src/mgmt/: frontend.rs  mod.rs  server.rs  telemetry.rs
src/preflight/: binaries.rs  mod.rs  network.rs  s3.rs
src/unpacker/: mod.rs
src/utils/: death.rs  metrics.rs  mod.rs  password.rs  ports.rs  stdout.rs
tests/: mgmt_api_test.rs
web/: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/app/: config.ts  routes.ts
web/src/: App.vue  config.ts  main.ts  (+2 more)
web_old/: components.json  package-lock.json  package.json
(+290 files in other folders)
