[package]
name = "neond"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.0", features = ["postgres", "uuid"] }
diesel-async = { version = "0.7.4", features = ["postgres", "bb8", "migrations"] }
diesel_migrations = "2.2.0"
uuid = { version = "1", features = ["v4", "serde"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bcrypt = "0.19.0"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
diesel-derive-enum = { version = "2", features = ["postgres"] }
rustls = "0.23.8"
rustls-platform-verifier = "0.5.0"
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13.0"
futures-util = "0.3"
neon_pageserver_client = { path = "neon/pageserver/client", package = "pageserver_client" }
neon_pageserver_api = { path = "neon/libs/pageserver_api", package = "pageserver_api" }
neon_utils = { path = "neon/libs/utils", package = "utils" }
pprof_util = "=0.7.0"
jemalloc_pprof = "=0.7.0"
mappings = "=0.7.0"
reqwest = "=0.12.4"
fs2 = "0.4.3"
tracing-panic = "0.1.2"
anyhow = "1.0.102"
tar = "0.4.44"
libc = "0.2.183"
ctrlc = "3.5.2"
tempfile = "3.27.0"
nix = "0.31.2"

[build-dependencies]
tar = "0.4"
flate2 = "1.0"
